# bioseqkit

./: LICENSE  README.md  analysis_sequence_fasta.ipynb  bioseqkit_test.ipynb  pyproject.toml  setup.py  test_bioseqkit.py
src/bioseqkit/: __init__.py  cli.py  models.py  operations.py  parser.py  stats.py  utils.py
src/bioseqkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bioseqkits/: __init__.py  cli.py  models.py  operations.py  parser.py  stats.py
src/bioseqkits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_bioseqkit.py
